Fix formatting issue in release notes

--- a/calico_versioned_docs/version-3.27/release-notes/index.mdx
+++ b/calico_versioned_docs/version-3.27/release-notes/index.mdx
@@ -100,7 +100,7 @@ For more information, see [Enable the eBPF data plane](../operations/ebpf/enabli
 * eBPF: fixes felix panic upon restart in debug mode when there are existing policy counters [calico #7797](https://github.com/projectcalico/calico/pull/7797) (@tomastigera)
 * eBPF: fix applyOnforward=false in global policies [calico #7707](https://github.com/projectcalico/calico/pull/7707) (@tomastigera)
 * eBPF: handles IPv4 packets with IP options. XDP only does so in kernels 5.18+ it drops them in older kernels. [calico #7701](https://github.com/projectcalico/calico/pull/7701) (@tomastigera)
-* eBPF* only report errors setting /proc/sys/net/../accept_local etc. if the device is present [calico #7631](https://github.com/projectcalico/calico/pull/7631) (@tomastigera)
+* eBPF: only report errors setting /proc/sys/net/../accept_local etc. if the device is present [calico #7631](https://github.com/projectcalico/calico/pull/7631) (@tomastigera)
 
 ## Known issues
 
