DOCS-2238: Publishes OSS 3.27.4 (#1544)

--- a/calico_versioned_docs/version-3.27/release-notes/index.mdx
+++ b/calico_versioned_docs/version-3.27/release-notes/index.mdx
@@ -39,32 +39,32 @@ For more information, see [Selector performance in EntityRules](../reference/res
 
 ### Enhancements
 
- - Use upstream hcsshim package instead of fork and update it to latest stable version (v0.11.4). [calico #8192](https://github.com/projectcalico/calico/pull/8192) (@coutinhop)
- - Enhance BGPFilter to filter route advertisement to BGP peers based on route's interface. Calico nodes stop advertising tunnel routes to iBGP peers as the routes are programmed by Felix. If you are doing iBGP peering with external peers this should not affect since the workload's routes are still advertised. Felix expect either .cali or .calico suffix for tunnel names like Wireguard. [calico #8175](https://github.com/projectcalico/calico/pull/8175) (@mazdakn)
- - We no longer provide Calico packages for OpenStack on Ubuntu Bionic or older, or test ourselves on Bionic, as it has become difficult to build a working Felix package for Bionic, due to glibc and libpcap library API version issues, and Bionic is now more than 5 years old and beyond its Canonical LTS period.  Our current recommendation is to use Calico with OpenStack Yoga on Ubuntu Focal or later. [calico #8157](https://github.com/projectcalico/calico/pull/8157) (@nelljerram)
- - Enhance BGPFilter to filter route advertisement to BGP peers based on route's origin. [calico #8149](https://github.com/projectcalico/calico/pull/8149) (@mazdakn)
- - Update Typha Deployment tolerations to helm charts so that it can be scheduled on any node. [calico #7979](https://github.com/projectcalico/calico/pull/7979) (@ffilippopoulos)
- - kube controllers run as a non-root user in s390x builds by default [calico #7955](https://github.com/projectcalico/calico/pull/7955) (@liudalibj)
- - calico-node -bpf dump policy now suppresses printing assembly by default. You need to use --asm flag [or -a] to see the assembly as well. [calico #7954](https://github.com/projectcalico/calico/pull/7954) (@StevenTigera)
- - Add a timeout to Typha's TLS handshake. [calico #7909](https://github.com/projectcalico/calico/pull/7909) (@rodrigorfk)
- - Add pre-deletion hook to helm chart to facilitate `helm uninstall` [calico #7859](https://github.com/projectcalico/calico/pull/7859) (@caseydavenport)
- - Don't write AS number to node if running with CALICO_NETWORKING_BACKEND=none. [calico #7821](https://github.com/projectcalico/calico/pull/7821) (@tobiasgiese)
- - Add pod security standard annotation to the tigera-operator namespace for Kubernetes 1.25+ [calico #7732](https://github.com/projectcalico/calico/pull/7732) (@si458)
- - allows reference to existing secrets for imagePullSecrets without passing the secret itself to helm. this enables management of secrets by an external system like sealedsecrets and prevents the secret data from being stored in helm. It works by allowing use of the installation's imagePullSecret field directly, whereas previously only the toplevel imagePullSecrets field was used. [calico #7657](https://github.com/projectcalico/calico/pull/7657) (@ozdanborne)
- - eBPF: Allow user to specify a regexp of interfaces that we want to turn GRO off at. [calico #7633](https://github.com/projectcalico/calico/pull/7633) (@StevenTigera)
- - Calico's integration code for OpenStack has been updated for OpenStack Yoga. [calico #7625](https://github.com/projectcalico/calico/pull/7625) (@nelljerram)
- - Add support for OpenStack on Ubuntu Jammy [calico #7622](https://github.com/projectcalico/calico/pull/7622) (@danudey)
- - BPF mode: add felix configuration parameter to allow NOTRACK to be disabled for certain external interfaces interfaces.  Useful for workaround conflicts with non-Calico networked containers etc. [calico #7595](https://github.com/projectcalico/calico/pull/7595) (@StevenTigera)
- - Expose the configuration for the CSI plugin in the operator helm chart [calico #7480](https://github.com/projectcalico/calico/pull/7480) (@nimimeht)
- - Update upstream CNI plugins and Flannel downloads to latest golang patches [calico #8303](https://github.com/projectcalico/calico/pull/8303) (@matthewdupre)
- - Remove the policy index from the correct jump map [calico #8282](https://github.com/projectcalico/calico/pull/8282) (@sridhartigera)
- - Avoid conntrack cleanup of IPv6 host networked workloads. (#8272) [calico #8273](https://github.com/projectcalico/calico/pull/8273) (@sridhartigera)
- - eBPF: ClusterIP reflects InternalTrafficPolicy=Local [calico #8262](https://github.com/projectcalico/calico/pull/8262) (@tomastigera)
- - Add openstack publishing promotion [v3.27] [calico #8261](https://github.com/projectcalico/calico/pull/8261) (@danudey)
- - Bump k8s dependency to v1.27.8 [calico #8246](https://github.com/projectcalico/calico/pull/8246) (@hjiawei)
- - Node learns about its ipv6 address in Kubernetes even if BGP is turned off and CNI is not Calico.
- - eBPF: kube-proxy ServiceInternalTrafficPolicy is now GA and setting the gate would generate a warning message. [calico #8242](https://github.com/projectcalico/calico/pull/8242) (@tomastigera)
- - eBPF: fixed policy cleanup after felix restart if a device is not present anymore [calico #8231](https://github.com/projectcalico/calico/pull/8231) (@fasaxc)
+* Use upstream hcsshim package instead of fork and update it to latest stable version (v0.11.4). [calico #8192](https://github.com/projectcalico/calico/pull/8192) (@coutinhop)
+* Enhance BGPFilter to filter route advertisement to BGP peers based on route's interface. Calico nodes stop advertising tunnel routes to iBGP peers as the routes are programmed by Felix. If you are doing iBGP peering with external peers this should not affect since the workload's routes are still advertised. Felix expect either .cali or .calico suffix for tunnel names like Wireguard. [calico #8175](https://github.com/projectcalico/calico/pull/8175) (@mazdakn)
+* We no longer provide Calico packages for OpenStack on Ubuntu Bionic or older, or test ourselves on Bionic, as it has become difficult to build a working Felix package for Bionic, due to glibc and libpcap library API version issues, and Bionic is now more than 5 years old and beyond its Canonical LTS period.  Our current recommendation is to use Calico with OpenStack Yoga on Ubuntu Focal or later. [calico #8157](https://github.com/projectcalico/calico/pull/8157) (@nelljerram)
+* Enhance BGPFilter to filter route advertisement to BGP peers based on route's origin. [calico #8149](https://github.com/projectcalico/calico/pull/8149) (@mazdakn)
+* Update Typha Deployment tolerations to helm charts so that it can be scheduled on any node. [calico #7979](https://github.com/projectcalico/calico/pull/7979) (@ffilippopoulos)
+* kube controllers run as a non-root user in s390x builds by default [calico #7955](https://github.com/projectcalico/calico/pull/7955) (@liudalibj)
+* calico-node -bpf dump policy now suppresses printing assembly by default. You need to use --asm flag [or -a] to see the assembly as well. [calico #7954](https://github.com/projectcalico/calico/pull/7954) (@StevenTigera)
+* Add a timeout to Typha's TLS handshake. [calico #7909](https://github.com/projectcalico/calico/pull/7909) (@rodrigorfk)
+* Add pre-deletion hook to helm chart to facilitate `helm uninstall` [calico #7859](https://github.com/projectcalico/calico/pull/7859) (@caseydavenport)
+* Don't write AS number to node if running with CALICO_NETWORKING_BACKEND=none. [calico #7821](https://github.com/projectcalico/calico/pull/7821) (@tobiasgiese)
+* Add pod security standard annotation to the tigera-operator namespace for Kubernetes 1.25+ [calico #7732](https://github.com/projectcalico/calico/pull/7732) (@si458)
+* allows reference to existing secrets for imagePullSecrets without passing the secret itself to helm. this enables management of secrets by an external system like sealedsecrets and prevents the secret data from being stored in helm. It works by allowing use of the installation's imagePullSecret field directly, whereas previously only the toplevel imagePullSecrets field was used. [calico #7657](https://github.com/projectcalico/calico/pull/7657) (@ozdanborne)
+* eBPF: Allow user to specify a regexp of interfaces that we want to turn GRO off at. [calico #7633](https://github.com/projectcalico/calico/pull/7633) (@StevenTigera)
+* Calico's integration code for OpenStack has been updated for OpenStack Yoga. [calico #7625](https://github.com/projectcalico/calico/pull/7625) (@nelljerram)
+* Add support for OpenStack on Ubuntu Jammy [calico #7622](https://github.com/projectcalico/calico/pull/7622) (@danudey)
+* BPF mode: add felix configuration parameter to allow NOTRACK to be disabled for certain external interfaces interfaces.  Useful for workaround conflicts with non-Calico networked containers etc. [calico #7595](https://github.com/projectcalico/calico/pull/7595) (@StevenTigera)
+* Expose the configuration for the CSI plugin in the operator helm chart [calico #7480](https://github.com/projectcalico/calico/pull/7480) (@nimimeht)
+* Update upstream CNI plugins and Flannel downloads to latest golang patches [calico #8303](https://github.com/projectcalico/calico/pull/8303) (@matthewdupre)
+* Remove the policy index from the correct jump map [calico #8282](https://github.com/projectcalico/calico/pull/8282) (@sridhartigera)
+* Avoid conntrack cleanup of IPv6 host networked workloads. (#8272) [calico #8273](https://github.com/projectcalico/calico/pull/8273) (@sridhartigera)
+* eBPF: ClusterIP reflects InternalTrafficPolicy=Local [calico #8262](https://github.com/projectcalico/calico/pull/8262) (@tomastigera)
+* Add openstack publishing promotion [v3.27] [calico #8261](https://github.com/projectcalico/calico/pull/8261) (@danudey)
+* Bump k8s dependency to v1.27.8 [calico #8246](https://github.com/projectcalico/calico/pull/8246) (@hjiawei)
+* Node learns about its ipv6 address in Kubernetes even if BGP is turned off and CNI is not Calico.
+* eBPF: kube-proxy ServiceInternalTrafficPolicy is now GA and setting the gate would generate a warning message. [calico #8242](https://github.com/projectcalico/calico/pull/8242) (@tomastigera)
+* eBPF: fixed policy cleanup after felix restart if a device is not present anymore [calico #8231](https://github.com/projectcalico/calico/pull/8231) (@fasaxc)
 
 ## Deprecated and removed features
 
@@ -81,26 +81,26 @@ For more information, see [Enable the eBPF data plane](../operations/ebpf/enabli
 
 ## Bug fixes
 
- - Prevent IPAM garbage collection from freezing when under high load [calico #8154](https://github.com/projectcalico/calico/pull/8154) (@JuoCode)
- - Correct policy for OpenStack sec group with no remote_ip_prefix [calico #8026](https://github.com/projectcalico/calico/pull/8026) (@nelljerram)
- - Fixed AWS ec2 detection not working with imdsv2 on Calico for Windows. [calico #7970](https://github.com/projectcalico/calico/pull/7970) (@davidgiga1993)
- - Fix panic when running 'calicoctl get nodes' when ASNumber was not present in the default BGPConfiguration. [calico #7858](https://github.com/projectcalico/calico/pull/7858) (@coutinhop)
- - Fix a few instances where KUBECONFIG was not respected [calico #7796](https://github.com/projectcalico/calico/pull/7796) (@skmatti)
- - Fix helm chart rendering multiple image pull secrets incorrectly [calico #7752](https://github.com/projectcalico/calico/pull/7752) (@oxr463)
- - Fix YAML injection vulnerabilities due to unsafe templating [calico #7642](https://github.com/projectcalico/calico/pull/7642) (@skmatti)
- - Fix 'error while loading shared libraries: libresolv.so.2: cannot open shared object file' on csi-node-driver-registrar. [calico #7586](https://github.com/projectcalico/calico/pull/7586) (@coutinhop)
- - Fix a divide-by-zero panic in Typha if it received a SIGTERM when it had no active connections.  Since Typha exits in either case, the impact was limited to a scary panic log. [calico #7585](https://github.com/projectcalico/calico/pull/7585) (@fasaxc)
- - Fix a divide-by-zero panic in Typha if it received a SIGTERM when it had no active connections.  Since Typha exits in either case, the impact was limited to a scary panic log. [calico #7575](https://github.com/projectcalico/calico/pull/7575) (@fasaxc)
- - When running Calico in policy-only mode, do not write the IP annotations to the node. [calico #7550](https://github.com/projectcalico/calico/pull/7550) (@skmatti)
- - eBPF: fixed host access to self and a service that redirects to self without CTLB [calico #8189](https://github.com/projectcalico/calico/pull/8189) (@tomastigera)
- - Fix incorrect conversion to 16-bit offset in the BPF assembler.  Fail if the value would wrap. [calico #8176](https://github.com/projectcalico/calico/pull/8176) (@fasaxc)
- - eBPF: icmp errors must be always treated as related, not only after a CT miss. [calico #8153](https://github.com/projectcalico/calico/pull/8153) (@tomastigera)
- - eBPF: Config option added for host networked NAT. Change in the configs related to connect time load balancing. [calico #8139](https://github.com/projectcalico/calico/pull/8139) (@sridhartigera)
- - BPF mode: fix that netlink IP sets were programmed even in BPF mode until the first policy/endpoint deletion event. [calico #8101](https://github.com/projectcalico/calico/pull/8101) (@fasaxc)
- - eBPF: fixes felix panic upon restart in debug mode when there are existing policy counters [calico #7797](https://github.com/projectcalico/calico/pull/7797) (@tomastigera)
- - eBPF: fix applyOnforward=false in global policies [calico #7707](https://github.com/projectcalico/calico/pull/7707) (@tomastigera)
- - eBPF: handles IPv4 packets with IP options. XDP only does so in kernels 5.18+ it drops them in older kernels. [calico #7701](https://github.com/projectcalico/calico/pull/7701) (@tomastigera)
- - eBPF - only report errors setting /proc/sys/net/../accept_local etc. if the device is present [calico #7631](https://github.com/projectcalico/calico/pull/7631) (@tomastigera)
+* Prevent IPAM garbage collection from freezing when under high load [calico #8154](https://github.com/projectcalico/calico/pull/8154) (@JuoCode)
+* Correct policy for OpenStack sec group with no remote_ip_prefix [calico #8026](https://github.com/projectcalico/calico/pull/8026) (@nelljerram)
+* Fixed AWS ec2 detection not working with imdsv2 on Calico for Windows. [calico #7970](https://github.com/projectcalico/calico/pull/7970) (@davidgiga1993)
+* Fix panic when running 'calicoctl get nodes' when ASNumber was not present in the default BGPConfiguration. [calico #7858](https://github.com/projectcalico/calico/pull/7858) (@coutinhop)
+* Fix a few instances where KUBECONFIG was not respected [calico #7796](https://github.com/projectcalico/calico/pull/7796) (@skmatti)
+* Fix helm chart rendering multiple image pull secrets incorrectly [calico #7752](https://github.com/projectcalico/calico/pull/7752) (@oxr463)
+* Fix YAML injection vulnerabilities due to unsafe templating [calico #7642](https://github.com/projectcalico/calico/pull/7642) (@skmatti)
+* Fix 'error while loading shared libraries: libresolv.so.2: cannot open shared object file' on csi-node-driver-registrar. [calico #7586](https://github.com/projectcalico/calico/pull/7586) (@coutinhop)
+* Fix a divide-by-zero panic in Typha if it received a SIGTERM when it had no active connections.  Since Typha exits in either case, the impact was limited to a scary panic log. [calico #7585](https://github.com/projectcalico/calico/pull/7585) (@fasaxc)
+* Fix a divide-by-zero panic in Typha if it received a SIGTERM when it had no active connections.  Since Typha exits in either case, the impact was limited to a scary panic log. [calico #7575](https://github.com/projectcalico/calico/pull/7575) (@fasaxc)
+* When running Calico in policy-only mode, do not write the IP annotations to the node. [calico #7550](https://github.com/projectcalico/calico/pull/7550) (@skmatti)
+* eBPF: fixed host access to self and a service that redirects to self without CTLB [calico #8189](https://github.com/projectcalico/calico/pull/8189) (@tomastigera)
+* Fix incorrect conversion to 16-bit offset in the BPF assembler.  Fail if the value would wrap. [calico #8176](https://github.com/projectcalico/calico/pull/8176) (@fasaxc)
+* eBPF: icmp errors must be always treated as related, not only after a CT miss. [calico #8153](https://github.com/projectcalico/calico/pull/8153) (@tomastigera)
+* eBPF: Config option added for host networked NAT. Change in the configs related to connect time load balancing. [calico #8139](https://github.com/projectcalico/calico/pull/8139) (@sridhartigera)
+* BPF mode: fix that netlink IP sets were programmed even in BPF mode until the first policy/endpoint deletion event. [calico #8101](https://github.com/projectcalico/calico/pull/8101) (@fasaxc)
+* eBPF: fixes felix panic upon restart in debug mode when there are existing policy counters [calico #7797](https://github.com/projectcalico/calico/pull/7797) (@tomastigera)
+* eBPF: fix applyOnforward=false in global policies [calico #7707](https://github.com/projectcalico/calico/pull/7707) (@tomastigera)
+* eBPF: handles IPv4 packets with IP options. XDP only does so in kernels 5.18+ it drops them in older kernels. [calico #7701](https://github.com/projectcalico/calico/pull/7701) (@tomastigera)
+* eBPF: only report errors setting /proc/sys/net/../accept_local etc. if the device is present [calico #7631](https://github.com/projectcalico/calico/pull/7631) (@tomastigera)
 
 ## Known issues
 
@@ -128,27 +128,27 @@ February 17, 2024
 
 #### Enhancements
 
- - ebpf: alternative cgroup2 mount path can be specified by setting CALICO_CGROUP_PATH env var for node. [calico #8512](https://github.com/projectcalico/calico/pull/8512) (@tomastigera)
- - Host MTU auto-detection now ignores interfaces that are down. [calico #8499](https://github.com/projectcalico/calico/pull/8499) (@fasaxc)
- - Bump iptables version of calico-node to 1.8.8 [calico #8485](https://github.com/projectcalico/calico/pull/8485) (@coutinhop)
- - Fix crypto UT after upgrading to golang v1.21.6 [calico #8478](https://github.com/projectcalico/calico/pull/8478) (@hjiawei)
- - ebpf: setting BPFExcludeIPsFromNAT allows node-local dns cache to work [calico #8473](https://github.com/projectcalico/calico/pull/8473) (@tomastigera)
- - Update runc [calico #8471](https://github.com/projectcalico/calico/pull/8471) (@Behnam-Shobiri)
- - Enable CGO for arm64 when building felix and node [calico #8470](https://github.com/projectcalico/calico/pull/8470) (@hjiawei)
- - ebpf: align defaultEndpointToHostAction with iptables - do not apply normal *-hep policy to wep [calico #8459](https://github.com/projectcalico/calico/pull/8459) (@tomastigera)
- - Felix now avoids accessing non-Calico IP sets. This reduces the scope for IP set compatibility errors when another app has created an IP set that Calico's version of IP set can't parse. [calico #8412](https://github.com/projectcalico/calico/pull/8412) (@mazdakn)
- - Remove spammy BIRD log about ignoring DOWN interfaces [calico #8401](https://github.com/projectcalico/calico/pull/8401) (@lbogdan)
- - Skip apiserver etcd3 healthcheck and disable profiling [calico #8396](https://github.com/projectcalico/calico/pull/8396) (@hjiawei)
+* ebpf: alternative cgroup2 mount path can be specified by setting CALICO_CGROUP_PATH env var for node. [calico #8512](https://github.com/projectcalico/calico/pull/8512) (@tomastigera)
+* Host MTU auto-detection now ignores interfaces that are down. [calico #8499](https://github.com/projectcalico/calico/pull/8499) (@fasaxc)
+* Bump iptables version of calico-node to 1.8.8 [calico #8485](https://github.com/projectcalico/calico/pull/8485) (@coutinhop)
+* Fix crypto UT after upgrading to golang v1.21.6 [calico #8478](https://github.com/projectcalico/calico/pull/8478) (@hjiawei)
+* ebpf: setting BPFExcludeIPsFromNAT allows node-local dns cache to work [calico #8473](https://github.com/projectcalico/calico/pull/8473) (@tomastigera)
+* Update runc [calico #8471](https://github.com/projectcalico/calico/pull/8471) (@Behnam-Shobiri)
+* Enable CGO for arm64 when building felix and node [calico #8470](https://github.com/projectcalico/calico/pull/8470) (@hjiawei)
+* ebpf: align defaultEndpointToHostAction with iptables* do not apply normal *-hep policy to wep [calico #8459](https://github.com/projectcalico/calico/pull/8459) (@tomastigera)
+* Felix now avoids accessing non-Calico IP sets. This reduces the scope for IP set compatibility errors when another app has created an IP set that Calico's version of IP set can't parse. [calico #8412](https://github.com/projectcalico/calico/pull/8412) (@mazdakn)
+* Remove spammy BIRD log about ignoring DOWN interfaces [calico #8401](https://github.com/projectcalico/calico/pull/8401) (@lbogdan)
+* Skip apiserver etcd3 healthcheck and disable profiling [calico #8396](https://github.com/projectcalico/calico/pull/8396) (@hjiawei)
 
 #### Bug fixes
 
- - Added retry mechanism to Windows version retrieval in install-cni to address possible panics when the OS is not ready. [calico #8466](https://github.com/projectcalico/calico/pull/8466) (@coutinhop)
- - ebpf: fixes possible holes in the list NAT backends if there is a terminating pod. [calico #8460](https://github.com/projectcalico/calico/pull/8460) (@tomastigera)
- - ebpf: fixed pods in nat-outgoing should not SNAT when accessing local host [calico #8458](https://github.com/projectcalico/calico/pull/8458) (@tomastigera)
- - ebpf: fixed leakage of nodeport healthcheck servers [calico #8457](https://github.com/projectcalico/calico/pull/8457) (@tomastigera)
- - ebpf: don't stumble on unknown prog types passed as int in json [calico #8456](https://github.com/projectcalico/calico/pull/8456) (@tomastigera)
- - Only program failsafe rules for IP version of the CIDR [calico #8455](https://github.com/projectcalico/calico/pull/8455) (@tomastigera)
- - Fix confd issues when running on Windows operator installations (using HPC). [calico #8422](https://github.com/projectcalico/calico/pull/8422) (@coutinhop)
+* Added retry mechanism to Windows version retrieval in install-cni to address possible panics when the OS is not ready. [calico #8466](https://github.com/projectcalico/calico/pull/8466) (@coutinhop)
+* ebpf: fixes possible holes in the list NAT backends if there is a terminating pod. [calico #8460](https://github.com/projectcalico/calico/pull/8460) (@tomastigera)
+* ebpf: fixed pods in nat-outgoing should not SNAT when accessing local host [calico #8458](https://github.com/projectcalico/calico/pull/8458) (@tomastigera)
+* ebpf: fixed leakage of nodeport healthcheck servers [calico #8457](https://github.com/projectcalico/calico/pull/8457) (@tomastigera)
+* ebpf: don't stumble on unknown prog types passed as int in json [calico #8456](https://github.com/projectcalico/calico/pull/8456) (@tomastigera)
+* Only program failsafe rules for IP version of the CIDR [calico #8455](https://github.com/projectcalico/calico/pull/8455) (@tomastigera)
+* Fix confd issues when running on Windows operator installations (using HPC). [calico #8422](https://github.com/projectcalico/calico/pull/8422) (@coutinhop)
 
 #### How to update
 
@@ -156,7 +156,7 @@ To update an existing installation of Calico Open Source 3.27, see [the upgrade 
 
 ### Calico Open Source 3.27.3 bug fix release
 
-April 02, 2024
+April 2, 2024
 
 #### Bug fixes
 
@@ -175,3 +175,29 @@ April 02, 2024
 #### How to update
 
 To update an existing installation of Calico Open Source 3.27, see [the upgrade guides](../operations/upgrading/index.mdx).
+
+### Calico Open Source 3.27.4 bug fix release
+
+July 8, 2024
+
+#### Enhancements
+
+* Update go version to v1.22.5, kubernetes version to v1.27.15, UBI version to v8.10 [calico #8937](https://github.com/projectcalico/calico/pull/8937) (@coutinhop)
+* ebpf: support for service loop prevention [calico #8893](https://github.com/projectcalico/calico/pull/8893) (@sridhartigera)
+* ebpf: cleanup BPF special devices when BPF is turned off [calico #8891](https://github.com/projectcalico/calico/pull/8891) (@tomastigera)
+
+#### Bug fixes
+
+* Fix calico-felix rpm libpcap.so linking dependency. [calico #8986](https://github.com/projectcalico/calico/pull/8986) (@hjiawei)
+* Upgrade bpftool to v7.4 to fix the issue of loading XDP programs in iptables data plane that happens in few distributions. [calico #8940](https://github.com/projectcalico/calico/pull/8940) (@mazdakn)
+* ebpf: fix* let the node handle packet when we are not sure about the destination [calico #8926](https://github.com/projectcalico/calico/pull/8926) (@tomastigera)
+* ebpf: fixed cleaning of programs and map when switching from ebpf to iptables mode. [calico #8888](https://github.com/projectcalico/calico/pull/8888) (@tomastigera)
+* Fix errors on kernels that don't support the XFRM netlink family. [calico #8872](https://github.com/projectcalico/calico/pull/8872) (@fasaxc)
+* ebpf: Update map definition in sockops program to let libbpf v1.0+ load them successfully. [calico #8702](https://github.com/projectcalico/calico/pull/8702) (@mazdakn)
+* ebpf: fix natOutgoing SNAT for icmp6 [calico #8686](https://github.com/projectcalico/calico/pull/8686) (@tomastigera)
+* Improve cni-plugin binary install verification. [calico #8841](https://github.com/projectcalico/calico/pull/8841) (@ialidzhikov)
+
+#### How to update
+
+To update an existing installation of Calico Open Source 3.27, see [the upgrade guides](../operations/upgrading/index.mdx).
+
