DOCS-2241: Adds metadata to use case pages

--- a/use-cases/cluster-mesh.mdx
+++ b/use-cases/cluster-mesh.mdx
@@ -1,6 +1,8 @@
 ---
-description: A guide for using Calico's cluster mesh.
-title: Cluster mesh
+description: Cluster mesh enables cross-cluster communication, service discovery, and federated endpoints in a Kubernetes-native way.
+title: Enhance Kubernetes networking with Calico cluster mesh
+keywords: [cluster mesh]
+sidebar_label: Cluster mesh
 ---
 
 # Cluster mesh
