--- a/use-cases/egress-access-controls.mdx
+++ b/use-cases/egress-access-controls.mdx
@@ -1,6 +1,8 @@
 ---
 description: A guide for using Calico's egress access controls.
-title: Egress access controls
+title: Securing your Kubernetes cluster with egress access controls
+keywords: [egress access controls]
+sidebar_label: Egress access controls
 ---
 
 # Egress access controls
