--- a/use-cases/egress-gateways.mdx
+++ b/use-cases/egress-gateways.mdx
@@ -1,6 +1,8 @@
 ---
-description: A guide for using Calico's egress gateways.
-title: Egress gateways
+description: Egress gateways can streamline your Kubernetes network security, offering fixed IP management, integration with external firewalls, and detailed traffic auditing to safeguard your deployments.
+title: Implement egress gateways for secure Kubernetes traffic management
+keywords: [egress gateways]
+sidebar_label: Egress gateways
 ---
 
 # Egress gateways
