--- a/use-cases/microsegmentation.mdx
+++ b/use-cases/microsegmentation.mdx
@@ -1,6 +1,8 @@
 ---
-description: A guide for implementing network microsegmentation with Calico.
-title: Microsegmentation
+description: Calico enables robust microsegmentation in Kubernetes environments, offering granular isolation and enhanced security for containerized applications.
+title: Implement microsegmentation with calico for enhanced Kubernetes Security
+keywords: [microsegmentation]
+sidebar_label: Microsegmentation
 ---
 
 # Microsegmentation
