--- a/use-cases/observability.mdx
+++ b/use-cases/observability.mdx
@@ -1,6 +1,8 @@
 ---
-description: A guide for using Calico's observability tools.
-title: Observability
+description: Observability is used to find and troubleshoot issues with workload communications, performance, and operations in a Kubernetes cluster.
+title: Optimizing Kubernetes cluster observability with Calico
+keywords: [observability]
+sidebar_label: Observability
 ---
 
 # Observability
