--- a/calico-cloud/operations/index.mdx
+++ b/calico-cloud/operations/index.mdx
@@ -1,11 +1,48 @@
 ---
 description: Manage clusters and add new users.
-hide_table_of_contents: true
 ---
 
-# Manage clusters and users
+import { DocCardLink, DocCardLinkLayout } from '/src/___new___/components';
 
-import DocCardList from '@theme/DocCardList';
-import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
+# Operations
 
-<DocCardList items={useCurrentSidebarCategory().items} />
+Post-installation tasks for managing Calico Cloud.
+
+<DocCardLinkLayout>
+  <DocCardLink docId='operations/cluster-management' />
+  <DocCardLink docId='operations/disconnect' />
+  <DocCardLink docId='operations/usage-metrics' />
+  <DocCardLink docId='operations/component-logs' />
+</DocCardLinkLayout>
+
+## Secure component communications
+
+<DocCardLinkLayout>
+  <DocCardLink docId='operations/comms/secure-metrics' />
+  <DocCardLink docId='operations/comms/secure-bgp' />
+</DocCardLinkLayout>
+
+## Monitoring
+
+<DocCardLinkLayout>
+  <DocCardLink docId='operations/monitor/prometheus/support' />
+  <DocCardLink docId='operations/monitor/metrics/recommended-metrics' />
+  <DocCardLink docId='operations/monitor/prometheus/byo-prometheus' />
+  <DocCardLink docId='operations/monitor/prometheus/configure-prometheus' />
+  <DocCardLink docId='operations/monitor/prometheus/alertmanager' />
+  <DocCardLink docId='operations/monitor/metrics/bgp-metrics' />
+  <DocCardLink docId='operations/monitor/metrics/policy-metrics' />
+  <DocCardLink docId='operations/monitor/metrics/elasticsearch-and-fluentd-metrics' />
+</DocCardLinkLayout>
+
+## eBPF
+
+<DocCardLinkLayout>
+  <DocCardLink docId='operations/ebpf/use-cases-ebpf' />
+  <DocCardLink docId='operations/ebpf/enabling-ebpf' />
+  <DocCardLink docId='operations/ebpf/troubleshoot-ebpf' />
+</DocCardLinkLayout>
+
+
+
+
