DOCS-2231: Edits to compatibility page to maintain only supported versions of CE

--- a/calico-enterprise/getting-started/compatibility.mdx
+++ b/calico-enterprise/getting-started/compatibility.mdx
@@ -6,7 +6,7 @@ description: Lists versions of Calico Enterprise and Kubernetes for each platfor
 
 ## Supported platforms
 
-The following list shows the platforms supported in this release. The tables provide a platform version history, starting with {{prodname}} 3.5. If you need an earlier version, contact Support.
+The following list shows the platforms supported in this release.  If you're working with a version older than these, consult the [documentation archive](https://docs.tigera.io/archive) or contact Support.
 
 - [AKS](#aks)
 - [EKS](#eks)
@@ -161,7 +161,9 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | TKG version | {{prodname}} support                 | Kubernetes versions    |
 | -------------------- | ----------- | ------------------------------------ | ---------------------- |
+| 3.19                 | 2.4         | {{prodname}} CNI with network policy | 1.27                    |
 | 3.18                 | 2.4         | {{prodname}} CNI with network policy | 1.27                   |
+| 3.17                 | 1.6         | {{prodname}} CNI with network policy | 1.23                   |
 | 3.16                 | 1.6         | {{prodname}} CNI with network policy | 1.23                   |
 | 3.15                 | 1.5         | {{prodname}} CNI with network policy | 1.22                   |
 | 3.14                 | 1.5         | {{prodname}} CNI with network policy | 1.21                   |
