--- a/calico-enterprise_versioned_docs/version-3.18/getting-started/compatibility.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/getting-started/compatibility.mdx
@@ -6,7 +6,7 @@ description: Lists versions of Calico Enterprise and Kubernetes for each platfor
 
 ## Supported platforms
 
-The following list shows the platforms supported in this release. The tables provide a platform version history, starting with {{prodname}} 3.5. If you need an earlier version, contact Support.
+The following list shows the platforms supported in this release.  If you're working with a version older than these, consult the [documentation archive](https://docs.tigera.io/archive) or contact Support.
 
 - [AKS](#aks)
 - [EKS](#eks)
