--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -218,7 +218,7 @@ Calico Enterprise 3.18.4 is now available. This release includes bug fixes and i
 
 July 22, 2024
 
-Tigera operator version has been updated to v1.32.10
+Tigera operator version has been updated to v1.32.10.
 
 #### Bug fixes
 
