Changes for CE 3.18 Operator patch release (#1561)

--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -216,6 +216,15 @@ Calico Enterprise 3.18.4 is now available. This release includes bug fixes and i
 * Fixes an issue where SecurityContextConstraints for components were incorrect or missing.
 * Security updates.
 
+July 22, 2024
+
+Tigera operator version has been updated to v1.32.10.
+
+#### Bug fixes
+
+*  Removed a mutual dependency between logstorage and other components that could result in a degraded TigeraStatus if certificates are missing required key usages.
+
 #### Updating
 
 To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
+
