CC: Add release note for new installation version 19.4.1

--- a/calico-cloud_versioned_docs/version-19-2/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/release-notes/index.mdx
@@ -5,6 +5,14 @@ title: Release notes
 
 # Calico Cloud release notes
 
+## July 23, 2024 (version 19.4.1)
+
+### Bug fixes
+
+* For AKS clusters with managed Calico, AKS changed the resources deployed which causes the installer
+  to fail or for existing clusters the operator will stop managing resources. We made changes to the Calico Cloud
+  installation to deploy additional resources needed to allow normal operation to continue and installs to proceed.
+
 ## July 9, 2024 (version 19.4.0)
 
 ## New features and enhancements
@@ -16,7 +24,7 @@ Instead of creating exceptions one by one, you can add them all at once by uploa
 
 For more information, see [Exclude vulnerabilities from scan results](../image-assurance/exclude-vulnerabilities-from-scan-results.mdx).
 
-## Bug fixes
+### Bug fixes
 
 * Previously, defining new values for the crawdad daemon by using the ImageAssurance custom resource had no effect, and the default values remained in place.
   This problem is now fixed.
