--- a/calico-cloud/release-notes/index.mdx
+++ b/calico-cloud/release-notes/index.mdx
@@ -5,6 +5,31 @@ title: Release notes
 
 # Calico Cloud release notes
 
+## July 23, 2024 (version 19.4.1)
+
+### Bug fixes
+
+* For AKS clusters with managed Calico, AKS changed the resources deployed which causes the installer
+  to fail or for existing clusters the operator will stop managing resources. We made changes to the Calico Cloud
+  installation to deploy additional resources needed to allow normal operation to continue and installs to proceed.
+
+## July 9, 2024 (version 19.4.0)
+
+## New features and enhancements
+
+### Bulk vulnerability exceptions for Image Assurance
+
+We added a way to efficiently add large numbers of vulnerability exceptions to your Image Assurance scan results.
+Instead of creating exceptions one by one, you can add them all at once by uploading a CSV file with the vulnerability definitions.
+
+For more information, see [Exclude vulnerabilities from scan results](../image-assurance/exclude-vulnerabilities-from-scan-results.mdx).
+
+## Bug fixes
+
+* Previously, defining new values for the crawdad daemon by using the ImageAssurance custom resource had no effect, and the default values remained in place.
+  This problem is now fixed.
+* We fixed a bug that caused problems during Helm upgrades from Calico Cloud versions earlier than 19.1.0.
+
 ## June 11, 2024 (version 19.3.0)
 
 ### New features and enhancements
