DOCS-2245: Edits to RN for operator-only release 3.18.4

--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -158,7 +158,7 @@ This release is supported for use in production.
 
 To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
 
-### Calico Enterprise 3.18.2 bug fix update
+### Calico Enterprise 3.18.2 bug fix release
 
 March 25, 2024
 
@@ -186,7 +186,7 @@ Calico Enterprise 3.18.2 is now available. This release includes bug fixes and i
 
 To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
 
-### Calico Enterprise 3.18.3 bug fix update
+### Calico Enterprise 3.18.3 bug fix release
 
 April 29, 2024
 
@@ -203,7 +203,7 @@ Calico Enterprise 3.18.3 is now available. This release includes bug fixes and i
 To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
 
 
-### Calico Enterprise 3.18.4 bug fix update
+### Calico Enterprise 3.18.4 bug fix release
 
 June 14, 2024
 
@@ -216,9 +216,13 @@ Calico Enterprise 3.18.4 is now available. This release includes bug fixes and i
 * Fixes an issue where SecurityContextConstraints for components were incorrect or missing.
 * Security updates.
 
+### Calico Enterprise 3.18.4 operator-only bug fix release
+
 July 22, 2024
 
-Tigera operator version has been updated to v1.32.10.
+Calico Enterprise 3.18.4 is now available with an update to the Tigera Operator.
+The Tigera operator version has been updated to version 1.32.10.
+No other components have been changed.
 
 #### Bug fixes
 
