[CORE-10513] Add OpenShift HCP docs
Add documentation to install Calico in OpenShift HCP (Hosted Control Planes) clusters to openshift hostedcontrolplanes.mdx in Calico OSS and EE.

Add missing import InstallOpenShiftManifests to openshift installation.mdx in Calico OSS and EE.

Remove broken links from calico-cloud/visibility/elastic/flow/aggregation.mdx.

Change Calico version to 'master' in the 'next' calico/variables.js.

--- a/calico-enterprise/getting-started/install-on-clusters/openshift/installation.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/openshift/installation.mdx
@@ -4,6 +4,8 @@ description: Install Calico Enterprise on an OpenShift 4 cluster.
 
 # Install Calico Enterprise on OpenShift
 
+import InstallOpenShiftManifests from '@site/calico-enterprise/_includes/components/InstallOpenShiftManifests.js';
+
 ## Big picture
 
 Install an OpenShift 4 cluster with {{prodname}}.
