--- a/calico/getting-started/kubernetes/openshift/installation.mdx
+++ b/calico/getting-started/kubernetes/openshift/installation.mdx
@@ -4,6 +4,8 @@ description: Install Calico on an OpenShift 4 cluster.
 
 # Install an OpenShift 4 cluster with Calico
 
+import InstallOpenShiftManifests from '@site/calico/_includes/components/InstallOpenShiftManifests.js';
+
 ## Big picture
 
 Install an OpenShift 4 cluster with {{prodname}}.
@@ -169,10 +171,6 @@ This may trigger the operator deployment and all of its resources (pods, deploym
 The OpenShift console provides an interface for editing the operator installation, viewing the operator's status, and more.
 
 ## Next steps
-
-**Required**
-
-- [Install and configure calicoctl](../../../operations/calicoctl/install.mdx)
 
 **Recommended - Networking**
 
