DOCS-2266 CE 3.19.1 operator update release prep

--- a/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
@@ -148,3 +148,18 @@ This release is supported for use in production.
 * Security updates
 
 To update an existing installation of Calico Enterprise 3.19, see [Install a patch release](../getting-started/manifest-archive.mdx).
+
+### Calico Enterprise 3.19.1 operator-only bug fix release
+
+July 24, 2024
+
+Calico Enterprise 3.19.1 is now available with an update to the Tigera Operator.
+The Tigera Operator version has been updated to version 1.34.2.
+No other components have been changed.
+
+#### Bug fixes
+
+* Previously, for AKS clusters running Kubernetes 1.29 or higher, migrating from Calico Open Source to Calico Enterprise resulted in failure.
+  AKS began applying an image set to clusters with Kubernetes 1.29, and this change conflicted with operations performed by the Tigera Operator during migration.
+  We fixed the issue by modifying how the Tigera Operator checks for image sets during migrations to Calico Enterprise.
+* Removed a mutual dependency between logstorage and other components that could result in a degraded TigeraStatus if certificates are missing required key usages.
