--- a/calico-enterprise_versioned_docs/version-3.18-2/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/networking/egress/egress-gateway-on-prem.mdx
@@ -272,7 +272,7 @@ EOF
 
 :::note
 
-When deploying egress gateway in custom namespace on openshift, the namespace needs to be set privileged by adding the following to the namespace:
+When deploying egress gateway in a non-default namespace on OpenShift, the namespace needs to be set privileged by adding the following to the namespace:
 
 ##### Label
 ```
