--- a/calico_versioned_docs/version-3.28/getting-started/kubernetes/helm.mdx
+++ b/calico_versioned_docs/version-3.28/getting-started/kubernetes/helm.mdx
@@ -93,14 +93,14 @@ For more information about configurable options via `values.yaml` please see [He
 1. Confirm that all of the pods are running with the following command.
 
    ```bash
-   watch kubectl get pods -n calico-system
+   watch kubectl get pods -n tigera-operator
    ```
 
    Wait until each pod has the `STATUS` of `Running`.
 
    :::note
 
-   The Tigera operator installs resources in the `calico-system` namespace. Other install methods may use
+   The Tigera operator installs resources in the `tigera-operator` namespace. Other install methods may use
    the `kube-system` namespace instead.
 
    :::
