Upgrade instructions for egress gateway

--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
@@ -60,6 +60,21 @@ If your cluster has Windows nodes and uses custom TLS certificates for log stora
 
 For {{prodname}} v3.5 and v3.7, upgrading multi-cluster management setups must include updating all managed and management clusters.
 
+### Egress gateway
+
+If your cluster has egress gateway in a non-default namespace, ensure the namespace is privileged by adding the following to the namespace:
+
+##### Label
+```
+openshift.io/run-level: "0"
+pod-security.kubernetes.io/enforce: privileged
+pod-security.kubernetes.io/enforce-version: latest
+```
+##### Annotation
+```
+security.openshift.io/scc.podSecurityLabelSync: "false"
+```
+
 ## Download the new manifests
 
 Make a manifests directory.
